@@ -53,6 +53,9 @@ public class Icon extends Texture {
 	public static final Icon lock = new Icon("lock");
 	public static final Icon key = new Icon("key");
 	public static final Icon disk = new Icon("disk");
+	public static final Icon play = new Icon("play");
+	public static final Icon pause = new Icon("pause");
+	public static final Icon stop = new Icon("stop");
 
 	public Icon(String resourceName) {
 		setTexture(ImageLoader.get("icons/" + resourceName + ".png"));
